--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
-    rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
-    <title>Fruits</title>
+    <title>HARVEST</title>
+    <style>
+        #textcenter h1 {
+            font-size: 60px; /* Adjust font size as needed */
+            font-weight: 700; /* Adjust font weight as needed */
+            color: #FF6347; /* Adjust color as needed */
+            text-transform: uppercase; /* Transform text to uppercase */
+            letter-spacing: 2px; /* Add spacing between letters */
+        }
+    </style>
 </head>
 <body>
     <div id="main">
@@ -15,17 +22,21 @@
             <div id="lnav">
                 <i class="ri-arrow-left-line"></i>
                 <div id="lnavr">
-                    <a href="">Home </a><a href="">Work</a>
-                    <i class="ri-twitter-x-fill"></i>
+                    <a href="">Home</a>
+                    <a href="">Work</a>
+                    <i class="ri-menu-line"></i>
                 </div>
             </div>
             <div id="textcenter">
-                <h1>Hello,</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat inventore perspiciatis perferendis enim incidunt aspernatur, eveniet, ipsam pariatur a, illum et commodi.</p>
-                <a href="#">Read</a>
-
-
+                <img src="1.png" alt="Fruit Basket" id="profile-pic">
+                <h1>Harvest</h1>
+                <p>Discover the freshness and variety of our fruit selection. From succulent apples to juicy oranges, our fruit basket offers a taste of nature's bounty.</p>
+                <a href="#">Explore More</a>
+                <div id="social-media">
+                    <a href="https://www.instagram.com/shreybean/"><i class="ri-instagram-fill"></i></a>
+                </div>
             </div>
+            
         </div>
         <div id="right">
             <div id="rtop">
