--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>HARVEST</title>
     <style>
         #textcenter h1 {
-            font-size: 60px; /* Adjust font size as needed */
+            font-size: 40px; /* Adjust font size as needed */
             font-weight: 700; /* Adjust font weight as needed */
             color: #FF6347; /* Adjust color as needed */
             text-transform: uppercase; /* Transform text to uppercase */
@@ -30,7 +30,7 @@
             <div id="textcenter">
                 <img src="1.png" alt="Fruit Basket" id="profile-pic">
                 <h1>Harvest</h1>
-                <p>Discover the freshness and variety of our fruit selection. From succulent apples to juicy oranges, our fruit basket offers a taste of nature's bounty.</p>
+                <p>Hey this is Shreyash Nimbargi<br>Discover the freshness and variety of our fruit selection. From succulent apples to juicy oranges, our fruit basket offers a taste of nature's bounty.</p>
                 <a href="#">Explore More</a>
                 <div id="social-media">
                     <a href="https://www.instagram.com/shreybean/"><i class="ri-instagram-fill"></i></a>
